--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,104 @@
     </head>
 
     <body>
-        Тест ГИТа
+        <header class="page-header">
+            <h1 class="page-header__logo-">HOS</h1>
+            <nav class="main-nav">
+                <ul class="main-nav__list">
+                    <li class="main-nav__item">
+                        <a href="#">About</a>
+                    </li>
+                    <li class="main-nav__item">
+                        <a href="#">Features</a>
+                    </li>
+                    <li class="main-nav__item">
+                        <a href="#">Services</a>
+                    </li>
+                    <li class="main-nav__item">
+                        <a href="#">Pricing</a>
+                    </li>
+                    <li class="main-nav__item">
+                        <a href="#">Blog</a>
+                    </li>
+                    
+                </ul>
+                <ul class=contact-list>
+                    <li class="contact-list__item">
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <small>Modern</small>
+            <h1 class="header__title">Hosting Platform</h1>
+            <p class="header__description">Web hosting makes the files that comprise a website available for viewing online.</p>
+            <button class="header__button">Services</button>
+
+            <img class="header__image" src="img/logo-img.jpg" width="570px" height="528px">
+        </header>
+        
+        <main class="page-main">
+            <img src="img/sponsors1.svg">
+            <img src="img/sponsors2.svg">
+            <img src="img/sponsors3.svg">
+            <img src="img/sponsors4.svg">
+            <img src="img/sponsors5.svg">
+
+            <section class="features">
+                <small class="features__small">Features</small>
+
+                <h1 class="features__title">Outstanding Features</h1>
+                <p class="features__desription">Website available for viewing online. Every website you've ever visited is hosted on a server.</p>
+
+                <button class="features__button-benefits">All benifits</button>
+
+                <ul class="features__list">
+                    <li class="features__list__item">
+                        <h2 class="features__item__title">Better</h2>
+                        <p class="features__item__description">Web hosting is a service that allows organizations and individuals.</p>
+                    </li>
+                    <li class="features__list__item">
+                        <h2 class="features__item__title">Faster</h2>
+                        <p class="features__item__description">A web host, or web hosting service provider, is a business that provides the technologies.</p>
+                    </li>
+                    <li class="features__list__item">
+                        <h2 class="features__item__title">Stronger</h2>
+                        <p class="features__item__description">Services needed for the website or webpage to be viewed in the Internet.</p>
+                    </li>
+                </ul>
+            </section>
+            <section class="services">
+                <small class="services__small">Services</small>
+                <h1 class="services__title">Wonderful Service</h1>
+                <p class="services__description">Services needed for the website or webpage to be viewed in the Internet.</p>
+                <button class="services__button">Learn more</button>
+
+                <img src="img/service-img.jpg">
+
+                <ul class="services__list">
+                    <li class="services__list__item">
+                        <h2 class="services__item__title">Shared Hosting</h2>
+                        <p class="services__item__description">Allows organizations and individuals to post a website or web page onto the Internet.</p>
+                        <a href="#" class="services__item">Read more</a>
+                    </li>
+                    <li class="services__list__item">
+                        <h2 class="services__item__title">Cloud Hosting</h2>
+                        <p class="services__item__description">Post a website or web page onto the Internet. A web host, or web hosting service provider.</p>
+                        <a href="#" class="services__item">Read more</a>
+                    </li>
+                    <li class="services__list__item">
+                        <h2 class="services__item__title">WordPress Hosting</h2>
+                        <p class="services__item__description">Business that provides the technologies and services needed for the website or webpage.</p>
+                        <a href="#" class="services__item">Read more</a>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="register">
+                <h1 class="register__title">Register domain name</h1>
+                <p class="register__description">Register Your Domain Name In 5 Minute</p>
+            </section>
+        </main>
+
     </body>
 
 </html>
