--- a/source/index.html
+++ b/source/index.html
@@ -534,9 +534,9 @@
     </div>
         <div class="footer__wrapper__flex">
             <p class="footer__copyright">Copyright © 2020 Laaqiq. All Rights Reserved.</p>
-            <div class="footer__flex__copyright">
-                <p class="footer__terms">Terms of Use</p>
-                <p class="footer__privacy">Privacy Policy</p>
+            <div class="footer__flex-copyright">
+                <p>Terms of Use</p>
+                <p>Privacy Policy</p>
             </div>
         </div>
         </footer>
